<resources>
    <string name="app_name">MSET9 Installer for Android</string>
    <string name="action_credits">Credits</string>
    <string name="action_advance">Advance</string>
    <string name="action_verbose">Verbose</string>
    <string name="action_log">Show Log</string>
    <!-- Strings used for fragments for navigation -->
    <string name="model_selector_label">Select Console Model</string>
    <string name="version_selector_label">Select System Version</string>
    <string name="mset9_installer_label">MSET9 Installer</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="alert_neutral">OK</string>

    <string name="model_old">Old 3DS/2DS</string>
    <string name="model_new">New 3DS/2DS</string>
    <string name="model_o3ds">Original 3DS</string>
    <string name="model_o3dsxl">Original 3DS XL</string>
    <string name="model_o2ds">Original 2DS</string>
    <string name="model_n3ds">New 3DS</string>
    <string name="model_n3dsxl">New 3DS XL</string>
    <string name="model_n2dsxl">New 2DS XL</string>

    <string name="version_114_117">11.4\n-\n11.7</string>
    <string name="version_118_1117">11.8\n-\n11.17</string>

    <string name="pick_picked_id1">ID1 picked, please pick ID0 or Nintendo 3DS folder instead</string>
    <string name="pick_picked_unknown">Unknown folder picked, please pick correct folder</string>
    <string name="pick_id0_not_1">There\'s no ID0 or more than one ID0 folder, please check</string>
    <string name="pick_multi_hax_id1">There\'s more than one hax ID1 ???</string>

    <string name="install_pick_3ds">Select \"Nintendo 3DS\" Folder</string>
    <string name="install_pick_sd">Select Your SD Card</string>
    <string name="install_check">Check Again</string>
    <string name="install_setup">Setup MSET9</string>
    <string name="install_inject_trigger">Inject trigger file</string>
    <string name="install_remove_trigger">Remove trigger file</string>
    <string name="install_remove">Remove MSET9</string>

    <string name="setup_loading">Setting up MSET9 &#8230;</string>

    <string name="setup_alert_setup_title">Setup Error</string>
    <string name="setup_alert_no_or_more_id1">There\'s no ID1 folder or multiple ID1 folders!</string>
    <string name="setup_alert_b9_in_n3ds">Found b9 inside your Nintendo 3DS Folder!\nYou should extract the files to the root (next to Nintendo 3DS folder, not inside)!</string>

    <string name="setup_alert_extdata_title">Setup Error - Extra Data</string>
    <string name="setup_alert_extdata_missing">There\'s no Extra Data</string>
    <string name="setup_alert_extdata_home_menu">There\'s no Home Menu Data</string>
    <string name="setup_alert_extdata_mii_maker">There\'s no Mii Maker Data</string>

    <string name="setup_alert_dummy_db_title">Setup Error - Dummy Title Database</string>
    <string name="setup_alert_dummy_db_prompt">Title database not found. Do you want this app to create it for you? (A title database is necessary for this exploit to run.)</string>
    <string name="setup_alert_dummy_db_prompt_yes">Yes</string>
    <string name="setup_alert_dummy_db_prompt_no">Cancel</string>
    <string name="setup_alert_dummy_db_failed">Failed to create dummy title database</string>
    <string name="setup_alert_dummy_db_visual_aid">Visual Aid</string>
    <string name="setup_alert_dummy_db_visual_aid_url">https://3ds.hacks.guide/images/screenshots/database-reset.jpg</string>
    <string name="setup_alert_dummy_db_created">A dummy title database has been created.</string>
    <string name="setup_alert_dummy_db_found">Dummy title database found.</string>
    <string name="setup_alert_dummy_db_reset">Put sd card back to your 3ds, power it on, then navigate to System Settings -> Data Management -> Nintendo 3DS -> Software -> Reset.</string>

    <string name="inject_missing_hax_extdata">Broken mset9 setup, extdata is missing</string>

    <string name="remove_loading">Removing MSET9 &#8230;</string>

    <string name="credits">
        %s&lt;br>&lt;br>
        &lt;ul>
            &lt;li>\u00A0 &lt;a href="https://github.com/zoogie/MSET9">MSET9&lt;/a> by &lt;a href="https://github.com/zoogie">zoogie&lt;/a>&lt;/li>
            &lt;li>\u00A0 &lt;a href="https://icon.kitchen">IconKitchen&lt;/a> by &lt;a href="https://twitter.com/romannurik">romannurik&lt;/a>&lt;/li>
        &lt;/ul>
    </string>

    <string name="log_share">Share</string>

</resources>