<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MSET9Installer">

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="5" />

    <Button
        android:id="@+id/buttonPickFolder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/install_pick_3ds"
        android:textSize="24sp" />

    <Button
        android:id="@+id/buttonSetup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:enabled="false"
        android:text="@string/install_setup"
        android:textSize="24sp" />

    <Button
        android:id="@+id/buttonInjectTrigger"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:enabled="false"
        android:text="@string/install_inject_trigger"
        android:textSize="24sp" />

    <Button
        android:id="@+id/buttonRemoveTrigger"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:enabled="false"
        android:text="@string/install_remove_trigger"
        android:textSize="24sp" />

    <Button
        android:id="@+id/buttonRemove"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:enabled="false"
        android:text="@string/install_remove"
        android:textSize="24sp" />

</LinearLayout>