<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="moe.saru.homebrew.console3ds.mset9_installer_android.MainActivity">
    <item
        android:id="@+id/action_credits"
        android:orderInCategory="100"
        android:title="@string/action_credits"
        app:showAsAction="never" />
    <group
        android:id="@+id/action_debug_extra"
        android:visible="false">
        <item
            android:id="@+id/action_verbose"
            android:checkable="true"
            android:orderInCategory="100"
            android:title="@string/action_verbose"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_log"
            android:orderInCategory="100"
            android:title="@string/action_log"
            app:showAsAction="never" />
    </group>
</menu>